--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,12 +1,28 @@
-name: Lint
+name: Format
 
 on: [push, pull_request]
 
 jobs:
-  lint:
+  format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: psf/black@stable
         with:
-          src: "./backend"
+          ref: ${{ github.head_ref }}
+      
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      
+      - name: Install Black
+        run: pip install black
+      
+      - name: Run Black formatter
+        run: black ./backend
+      
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Apply Black formatting"
+          branch: ${{ github.head_ref }}
