--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.513.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^22.15.30",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "@vitejs/plugin-vue": "^5.2.3",
