--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "lucide-vue-next": "^0.513.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
