--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@meforma/vue-toaster": "^1.3.0",
     "axios": "^1.10.0",
+    "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.513.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
